syntax="proto3"; //版本号
package ioBuf;  //包名
option go_package = "./;ioBuf";

// 对外服数据协议
message clientBuf {
  // 协议开关，用于一些协议级别的开关控制，比如 安全加密校验等。 : 0 不校验
  uint32 protocolSwitch = 2;
  // 业务路由（高16为主, 低16为子）
  uint32 cmdMerge = 3;
  // 业务请求数据
  bytes data = 6;
}